updata package json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "expensetracker",
   "version": "0.1.0",
+  "homepage": "http://arihantcode123.github.io/portfolio_react",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -11,12 +12,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
